// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filterSectionsByName > should recursively filter sections and components by name 1`] = `
[
  {
    "components": [],
    "name": "General",
    "sections": [
      {
        "components": [
          {
            "name": "Button",
          },
        ],
        "name": "Particles",
        "sections": [],
      },
    ],
  },
]
`;

exports[`filterSectionsByName > should skip sections without matches inside 1`] = `
[
  {
    "components": [],
    "name": "General",
    "sections": [],
  },
]
`;
